--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
 </head>
 
 <body>
-    <header>
+    <header class="container-fluid">
         <h1>
-            <a class="logo" href="index.html">La Patisserie</a>
+            <a class="logo container-fluid" href="index.html">La Patisserie</a>
         </h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li class="cbk">|</li>
-                <li><a href="#hakkımda">About</a></li>
+                <li><a href="#hakkımda container-fluid">About</a></li>
                 <li class="cbk">|</li>
-                <li><a href="#product">Products</a></li>
+                <li><a href="#product container-fluid">Products</a></li>
                 <li class="cbk">|</li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
@@ -37,16 +37,16 @@
     <!-- SLİDER -->
     <section class="slider">
 
-        <div class="swiper">
-            <div class="swiper-wrapper">
+        <div class="swiper ">
+            <div class="swiper-wrapper ">
 
-                <div class="swiper-slide"><img src="slider1.jpg" width="100%" height="800px"></div>
-                <div class="swiper-slide"><img src="slider2.jpg" width="100%" height="800px"></div>
-                <div class="swiper-slide"><img src="slider3.jpg" width="100%" height="800px"></div>
+                <div class="swiper-slide "><img src="slider1.jpg"  width="100%" height="650px"></div>
+                <div class="swiper-slide "><img src="slider2.jpg"  width="100%" height="650px"></div>
+                <div class="swiper-slide "><img src="slider3.jpg"  width="100%" height="650px"></div>
             </div>
     </section>
     <!-- ABOUT -->
-    <section id="hakkımda" class="welcome">
+    <section id="hakkımda container-fluid" class="welcome">
         <div class="about">
             <h3>About</h3>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim nemo vitae cumque! Unde est rerum repellat
@@ -62,13 +62,14 @@
 
 
         </div>
-        <div class="aboutimg">
+        <div class="aboutimg container-fluid">
             <img class="imgpast" src="pastane.jpg">
         </div>
     </section>
 
     <!-- PRODUCT -->
-    <h3 id="product" class="producth3">PRODUCT</h3>
+    <h3 id="product container-fluid" class="producth3">PRODUCT</h3>
+    <div class="container-fluid">
     <div class="card">
         <img src="1.jpg" class="card-image">
         <h3 class="card-title">Chocolate Cake</h3>
@@ -101,7 +102,7 @@
         <img src="4.jpg" class="card-image">
         <h3 class="card-title">Caramel-Filled Cake</h3>
     </div>
-
+    </div>
     <!-- Contact -->
     <section id="contact">
         <div class="contact-container">
@@ -129,3 +130,4 @@
 </body>
 
 </html>
+    
